introducing facility to archive tasks

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,8 @@
             <li id="front" ><a href="/">Home</a></li>
            
             <li id="task_list"><a href="/task_list">Tasks</a></li>
+
+            <li id="archive_task_list"><a href="/task_list?archive=true">Archives</a></li>
            
             {% if not current_user.email %}
             <li id="new_task_logged_in"><a href="/new_task">New</a></li>
