--- a/templates/task.html
+++ b/templates/task.html
@@ -88,23 +88,30 @@
               </tbody>
             </table>
             <div class="row">
-              <div class="col-lg-7 col-md-7">
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
                 {% if sub_tasks|length > 0 %}
               <b><a href="/task?id={{task['_id']}}&instant=true">Perform this task again</a></b>  
               {% else %}
               <b><a href="/task?id={{task['_id']}}&instant=true">Perform this task immediately</a></b>  
               {% endif %}
               <br>
+              
+            </div>
+            
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
+                
+              <b><a href="/task?id={{task['_id']}}&archive=true">Archive </a></b>  
+              
               <br>
+              
             </div>
-          </div>
-            <div class="row">
-              <div class="col-lg-7 col-md-7">
-                Tasks cannot be edited at this time. However, you can delete a task and create a new task with the correct information.
-                <br>
-              <b><a href="/delete_task?id={{task['_id']}}">Delete this task</a></b>
+          
+            
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
+                
+              <b><a href="/delete_task?id={{task['_id']}}">Delete </a></b>
             </div>
-            </div>
+          </div>  
           </div>
       
       </div>
