--- a/templates/task.html
+++ b/templates/task.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-        <div class="container">
+        <div class="container" id="task_details">
         <div class="row">
           <div class="col-lg-9 col-md-9">
             <table class="table table-bordered table-striped table-hover">
@@ -15,7 +15,7 @@
                 <tr>
                   <td>Type
                   </td>
-                  <td>
+                  <td id="task_type">
                     {{task['type'].title()}}
                   </td>
                 </tr>
@@ -88,16 +88,20 @@
               </tbody>
             </table>
             <div class="row">
-              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
+              <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                 {% if sub_tasks|length > 0 %}
-              <b><a href="/task?id={{task['_id']}}&instant=true">Perform this task again</a></b>  
+              <a href="/task?id={{task['_id']}}&instant=true" class="btn-u btn-u-blue">Perform again</a>
               {% else %}
-              <b><a href="/task?id={{task['_id']}}&instant=true">Perform this task immediately</a></b>  
+              <a href="/task?id={{task['_id']}}&instant=true" class="btn-u btn-u-blue">Perform immediately</a>
               {% endif %}
+              <a href="/task?id={{task['_id']}}&archive=true" class="btn-u btn-u-blue">Archive </a>
+              
+              <a href="#" onclick="show_copy()" class="btn-u btn-u-blue">Copy</a>
+              <a href="/delete_task?id={{task['_id']}}" class="btn-u btn-u-red">Delete </a>
               <br>
               
             </div>
-            
+            <!--
               <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
                 
               <b><a href="/task?id={{task['_id']}}&archive=true">Archive </a></b>  
@@ -111,6 +115,10 @@
                 
               <b><a href="/delete_task?id={{task['_id']}}">Delete </a></b>
             </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
+                
+              <b><a href="#" onclick="show_copy()">Copy</a></b>
+            </div> -->
           </div>  
           </div>
       
@@ -162,43 +170,391 @@
     </div>
     {% endif %}
       </div>
-      
+     <div class="container" id="task_copy" style="display:none;">
+
+    
+    
+    <div class="row">
+      <br>
+      <div class="col-lg-9 col-md-9 col-sm-12">
+        {% if error|length > 0%}
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+              <br>
+                <div class="alert alert-danger fade in">{{error}}</div>
+              </div>
+            </div>
+            {% endif %}
+   
+        <form class="form-horizontal well" method="post" id="form" enctype="multipart/form-data" action="/task_list">
+              <fieldset>
+                <legend>Add New Task</legend>
+
+                <div class="form-group info">
+                  <label class="control-label col-lg-2 col-md-2 col-sm-2" for="selectError">Method</label>
+                  <div class="col-lg-4 col-md-4 col-sm-4">
+                    <select id="method" name="method" class="form-control" onchange="method_controller(this)">
+                      {% if task['method']=='email' %}
+                      <option selected>Email</option>
+              <option>SMS</option>
+              <option>Voice</option>                      
+              {% endif %}
+              {% if task['method']=='sms' %}
+                      <option>Email</option>
+              <option selected>SMS</option>
+              <option>Voice</option>                      
+              {% endif %}
+              {% if task['method']=='voice' %}
+                      <option>Email</option>
+              <option>SMS</option>
+              <option selected>Voice</option>                      
+              {% endif %}
+                    </select>
+                    
+                  </div>
+                   </div>
+
+                   {% if task['method']=='email' %}
+                  <div class="form-group" id="subject-message-controller">
+                  <label class="control-label col-lg-2" for="input01">Subject</label>
+                  <div class="col-lg-9 col-md-9 col-sm-9">
+                    {% if 'subject' in task %}
+                    <input type="text" class="input-xlarge form-control" id="subject" name="subject" value="{{task['subject']}}">
+                    {% else %}
+                    <input type="text" class="input-xlarge form-control" id="subject" name="subject">
+                    {% endif %}
+                    <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
+                  </div>
+                </div>
+                {% endif %}
+
+                <div class="form-group" style="display:none" id="sms-message-controller">
+                  <label class="control-label col-lg-2" for="input01">Message</label>
+                  <div class="col-lg-9 col-md-9 col-sm-9">
+                    <input type="text" class="input-xlarge form-control" id="sms_message" name="sms_message" value="{{task['message']}}">
+                    <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
+                  </div>
+                </div>
+                <div class="form-group" id="email-message-controller">
+                  <label class="control-label col-lg-2" for="input01">Message</label>
+                  <div class="col-lg-9 col-md-9 col-sm-9">
+                    <textarea class="input-xlarge form-control" id="message" name="message" style="display:inline;margin:0px">{{task['message']}}</textarea>
+
+                    <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
+                  </div>
+                </div>
+                <div class="form-group" id="attachment-controller">
+                  <label class="control-label col-lg-2" for="input01">Attachment</label>
+                  <div class="col-lg-6 col-md-6 col-sm-6">
+                    <input type="file" class="form-control" id="attachment" name="attachment">
+                    <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
+                  </div>
+                </div>
+                
+                <div class="form-group info">
+                  <label class="control-label col-lg-2 col-md-2 col-sm-2">Type</label>
+                  <div class="col-lg-4 col-md-4 col-sm-4">
+                    <select id="type" name="type" class="form-control" onchange="input_controller(this)">
+                      <option>One-Time</option>
+                      <option>Daily</option>
+                      <option>Weekly</option>
+                      <option>Monthly</option>
+                      
+                    </select>
+                    
+                  </div>
+                   </div>
+
+                   <div class="form-group" id="date-controller">
+                  <label class="control-label col-lg-2 col-md-2 col-sm-2" for="input01">Date</label>
+                  <div class="col-lg-4 col-md-4 col-sm-4">
+                    <input type="text" class="input-xlarge form-control" id="datepicker" name="datepicker">
+                    <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
+                  </div>
+                </div>
+
+                <div class="form-group info" id="day-of-week-controller" style="display:none;">
+                  <label class="control-label col-lg-2 col-md-2 col-sm-2">Day Of Week</label>
+                  <div class="col-lg-6 col-md-6 col-sm-6">
+                    <select id="week-type" name="week-type" class="form-control" >
+                      <option>Monday</option>
+                      <option>Tuesday</option>
+                      <option>Wednesday</option>
+                      <option>Thursday</option>
+                      <option>Friday</option>
+                      <option>Saturday</option>
+                      <option>Sunday</option>
+                    </select>
+                    
+                  </div>
+                   </div>
+
+                   <div class="form-group info" id="day-of-month-controller" style="display:none;">
+                  <label class="control-label col-lg-2 col-md-2 col-sm-2">Day Of Month</label>
+                  <div class="col-lg-4 col-md-4 col-sm-4">
+                    <select id="month-type" name="month-type" class="form-control" >
+                      <option>1</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>5</option>
+                      <option>6</option>
+                      <option>7</option>
+                      <option>8</option>
+                      <option>9</option>
+                      <option>10</option>
+                      <option>11</option>
+                      <option>12</option>
+                      <option>13</option>
+                      <option>14</option>
+                      <option>15</option>
+                      <option>16</option>
+                      <option>17</option>
+                      <option>18</option>
+                      <option>19</option>
+                      <option>20</option>
+                      <option>21</option>
+                      <option>22</option>
+                      <option>23</option>
+                      <option>24</option>
+                      <option>25</option>
+                      <option>26</option>
+                      <option>27</option>
+                      <option>28</option>
+                      <option>29</option>
+                      <option>30</option>
+                      <option>31</option>
+                      
+                    </select>
+                    
+                  </div>
+                   </div>
+
+                 <div class="form-group">
+                  <label class="control-label col-lg-2 col-md-2 col-sm-2" for="input01">Time</label>
+                  <div class="col-lg-4 col-md-4 col-sm-4">
+                    <input type="time" id="time" class="form-control" name="time" value="09:00:AM">
+                    
+                  </div>
+                </div>
+                <!--<div class="form-group info">
+                  <label class="control-label" for="selectError">Time</label>
+                  <div class="controls">
+                    <select id="time" name="time">
+                      <option>9:00:AM</option>
+                      <option>9:30:AM</option>
+                      <option>10:00:AM</option>
+                      <option>10:30:AM</option>
+                      <option>11:00:AM</option>
+                      <option>11:30:AM</option>
+                      <option>12:00:PM</option>
+                      <option>12:30:PM</option>
+                      <option>1:00:PM</option>
+                      <option>1:30:PM</option>
+                      <option>2:00:PM</option>
+                      <option>2:30:PM</option>
+                      <option>3:00:PM</option>
+                      <option>3:30:PM</option>
+                      <option>4:00:PM</option>
+                      <option>4:30:PM</option>
+                      <option>5:00:PM</option>
+                      <option>5:30:PM</option>
+                      <option>6:00:PM</option>
+                      <option>6:30:PM</option>
+                      <option>7:00:PM</option>
+                      <option>7:30:PM</option>
+                      <option>8:00:PM</option>
+                      <option>8:30:PM</option>
+                      <option>9:00:PM</option>
+
+                      
+                    </select>
+                    
+                  </div>
+                   </div>-->
+                   
+                   <!--div class="form-group info">
+                  <label class="control-label col-lg-2 col-md-2 col-sm-2" for="selectError">Timezone</label>
+                  <div class="col-lg-4 col-md-4 col-sm-4">
+                    <select id="timezone" name="timezone" class="form-control" >
+                      <option>IST</option>
+              <option>GMT</option>                      
+                    </select>
+                    
+                  </div>
+                   </div-->
+                   <!--div class="form-group info" id="country-code-controller" style="display:none;">
+                  <label class="control-label col-lg-2 col-md-2 col-sm-2" for="selectError">Country Code</label>
+                  <div class="col-lg-6 col-md-6 col-sm-6" >
+                    <select id="country_code" name="country_code" class="form-control" >
+                      <option>+001 (for US)</option>
+              <option>+91 (for India)</option>                  
+                    </select>
+                    
+                  </div>
+                   </div-->
+                   <div class="form-group">
+                  <label class="control-label col-lg-2 col-md-2 col-sm-2" for="input01">Recipient</label>
+                  <div class="col-lg-8 col-md-8 col-sm-8">
+                    <input type="email" class="input-xlarge form-control" id="details" name="details" placeholder="eg. abc@xyz.com">
+                    <p id="recipient-helper" class="help-block">Enter a valid email address eg. abc@xyz.com</p>
+                  </div>
+                </div>
+
+                <div class="form-actions">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+
+            </fieldset>
+        </form>
+      </div>
+    </div>
+
+  </div>
+ 
 <script>
+
+$("textarea").jqte({format:false});
+$('.jqte').css('margin','0px');
+
+
+
+
+
 $('#form').submit(function(){
-      var username=$('#username').val();
-      var email=$('#email').val()
-      var password=$('#password').val();
-      var confirm_password=$('#confirm_password').val();
-      if(email==null || email.trim()=="" || password==null || password.trim()=="" || username==null || username.trim()=="")
-      {
-        alert("Email, password and name cannot be empty");
-        return false;
-
-      }
-      if(password!=confirm_password)
-      {
-        alert("Passwords do not match");
-        return false;
-      }
-      if(password.length<5)
-      {
-        alert("Password should be atleast 5 characters");
-        return false;
-      }
 
 
-    });
-$('#login').submit(function(){
-      var name=$('#name').val();
-  var password=$('#login_password').val();
-  if(name==null || name.trim()=="" || password==null || password.trim()=="")
+var message=$('#message').val();
+var date=$('#datepicker').val();
+var recipients=$('#details').val();
+var time=$('#time').val();
+var type=$('#type').val();
+
+if($('#method').val()=='SMS' || $('#method').val()=='Voice')
+{
+  message=$('#sms_message').val();
+  $('#message').val(message);
+}
+
+
+if(type=='One-Time')
+{
+  if(message==null || message.trim()=="" || date==null || date.trim()=="" || recipients==null || recipients=="" || time==null || time.trim()=="")
   {
-    alert("Email/Username/Password cannot be empty");
+    alert('Message, Date and Recipients cannot be empty');
     return false;
   }
-    });
-  });
+}
+if(type=='Daily')
+{
+  if(message==null || message.trim()=="" || recipients==null || recipients=="" || time==null || time.trim()=="")
+  {
+    alert('Message, Time and Recipients cannot be empty');
+    return false;
+  } 
+}
+if(type=='Weekly')
+{
+  var day_of_week=$('#week-type').val();
+  if(message==null || message.trim()=="" || recipients==null || recipients=="" || time==null || time.trim()=="" || day_of_week==null || day_of_week.trim()=="")
+  {
+    alert('Message, Day of Week, Time and Recipients cannot be empty');
+    return false;
+  } 
+}
+if(type=='Monthly')
+{
+  var day_of_month=$('#month-type').val();
+  if(message==null || message.trim()=="" || recipients==null || recipients=="" || time==null || time.trim()=="" || day_of_month==null || day_of_month.trim()=="")
+  {
+    alert('Message, Day of Month, Time and Recipients cannot be empty');
+    return false;
+  } 
+}
 
+
+
+});
+$('#datepicker').datepicker({minDate:new Date()});
+
+function method_controller(obj)
+{
+  var method=obj.value;
+  if(method=='Email')
+  {
+    $('#email-message-controller').css('display','');
+    $('#sms-message-controller').css('display','none');
+    $('#subject-message-controller').css('display','');
+    $('#attachment-controller').css('display','');
+    $('#recipient-helper').html('Enter a valid email address eg. abc@xyz.com');
+    $('#details').attr('type','email');
+    $('#details').attr('placeholder','eg. abc@xyz.com');
+    //$('#country-code-controller').css('display','none');
+  }
+  if(method=='SMS' || method=='Voice')
+  {
+    $('#sms-message-controller').css('display','');
+    $('#email-message-controller').css('display','none');
+    $('#subject-message-controller').css('display','none');
+    $('#attachment-controller').css('display','none');
+    $('#recipient-helper').html('Enter a valid phone number eg. 9830906922 without +91 or 0');
+    $('#details').attr('type','text');
+    $('#details').attr('placeholder','eg. 9830906922');
+    //$('#country-code-controller').css('display','');
+  }
+}
+
+function input_controller(obj)
+{
+  
+  var type=obj.value;
+  if(type=='Daily'){
+    $('#date-controller').css('display','none');
+    $('#day-of-week-controller').css('display','none');
+    $('#day-of-month-controller').css('display','none');
+  }
+  if(type=='One-Time')
+  {
+    $('#date-controller').css('display','');
+    $('#day-of-week-controller').css('display','none');
+    $('#day-of-month-controller').css('display','none');
+  }
+  if(type=='Weekly')
+  {
+    $('#day-of-week-controller').css('display','');
+    $('#date-controller').css('display','none');
+    $('#day-of-month-controller').css('display','none');
+  }
+  if(type=="Monthly")
+  {
+    $('#day-of-month-controller').css('display','');
+    $('#day-of-week-controller').css('display','none');
+    $('#date-controller').css('display','none');
+  }
+
+}
+
+</script>
+
+<script>
+
+function show_copy()
+{
+  $("#task_details").css("display","none");
+  $("#task_copy").css("display","");
+  var task_type=$("#task_type").html().trim();
+  
+  $("#type option").each(function(){
+    if($(this).val()==task_type)
+    {
+      $(this).attr("selected",true);
+    }
+  });
+  var obj={}
+  obj.value=task_type;
+  input_controller(obj);
+
+}
 
 </script>
       {% endblock %}
