contact list feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
                 {% else %}
                 <li><a href="/logout">Logout</a></li>
 
-                <li><a href="#"> Hi,
+                <li id="profile"><a href="/profile"> Hi,
                 {{current_user.name}}</a>
                 </li>
                 
