--- a/templates/list.html
+++ b/templates/list.html
@@ -286,7 +286,7 @@
           			   <div class="form-group">
 			            <label class="control-label col-lg-2 col-md-2 col-sm-2" for="input01">Recipient</label>
 			            <div class="col-lg-8 col-md-8 col-sm-8">
-			              <input type="email" class="input-xlarge form-control" id="details" name="details" placeholder="eg. abc@xyz.com">
+			              <input type="text" class="input-xlarge form-control" id="details" name="details" placeholder="eg. abc@xyz.com">
 			              <p id="recipient-helper" class="help-block">Enter a valid email address eg. abc@xyz.com</p>
 			            </div>
 			          </div>
@@ -307,7 +307,9 @@
 $("textarea").jqte({format:false});
 $('.jqte').css('margin','0px');
 
-
+$("input#details").autocomplete({
+	source: '/options'
+});
 
 
 
@@ -363,6 +365,16 @@ if(type=='Monthly')
 }
 
 
+var $details=$(this).find("input[name=details]");
+var recipient=$details.val();
+var lastIndex=recipient.lastIndexOf('<');
+if (lastIndex>=0)
+{
+	var truncated_recipient=recipient.substring(lastIndex+1,recipient.length-1);
+	$details.val(truncated_recipient);
+}
+
+
 
 });
 $('#datepicker').datepicker({minDate:new Date()});
@@ -377,7 +389,7 @@ function method_controller(obj)
 		$('#subject-message-controller').css('display','');
 		$('#attachment-controller').css('display','');
 		$('#recipient-helper').html('Enter a valid email address eg. abc@xyz.com');
-		$('#details').attr('type','email');
+		//$('#details').attr('type','email');
 		$('#details').attr('placeholder','eg. abc@xyz.com');
 		//$('#country-code-controller').css('display','none');
 	}
