pause and resume tasks feature, bug fixes, displaying tabs based on whether user is logged in presently

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,15 +77,12 @@
         <div class="collapse navbar-collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li id="front" ><a href="/">Home</a></li>
-           
+           {% if current_user.email %}
             <li id="task_list"><a href="/task_list">Tasks</a></li>
 
             <li id="archive_task_list"><a href="/task_list?archive=true">Archives</a></li>
            
-            {% if not current_user.email %}
-            <li id="new_task_logged_in"><a href="/new_task">New</a></li>
             
-            {% else %}
             <li id="new_task"><a href="/new_task">New</a></li>
             {% endif %}
             <li id="faq"><a href="/faq">FAQ</a></li>
