--- a/templates/faq.html
+++ b/templates/faq.html
@@ -33,7 +33,7 @@
                     <i class="icon-directions"></i>
                     <div class="inner-faq-b">
                         <h3>How can I get started ?</h3>    
-                        <p>You can get started in less than 5 minutes by signing up on <a href="/signup">this</a> link.</p>
+                        <p>You can get started in less than 5 minutes by signing up on <a href="/signup" style="color:white;text-decoration:underline;">this</a> link.</p>
                     </div>    
                 </div>
             </div>    
@@ -176,44 +176,7 @@
 
   
       
-<script>
-$('#form').submit(function(){
-      var username=$('#username').val();
-      var email=$('#email').val()
-      var password=$('#password').val();
-      var confirm_password=$('#confirm_password').val();
-      if(email==null || email.trim()=="" || password==null || password.trim()=="" || username==null || username.trim()=="")
-      {
-        alert("Email, password and name cannot be empty");
-        return false;
 
-      }
-      if(password!=confirm_password)
-      {
-        alert("Passwords do not match");
-        return false;
-      }
-      if(password.length<5)
-      {
-        alert("Password should be atleast 5 characters");
-        return false;
-      }
-
-
-    });
-$('#login').submit(function(){
-      var name=$('#name').val();
-  var password=$('#login_password').val();
-  if(name==null || name.trim()=="" || password==null || password.trim()=="")
-  {
-    alert("Email/Username/Password cannot be empty");
-    return false;
-  }
-    });
-  
-
-
-</script>
 {% endblock %}
 
 
