--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,7 @@
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <!--script src="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script-->
-  <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+  <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
   <script src="/static/javascript/bootstrap.min.js"></script>
   <script src="/static/javascript/tablesaw.stackonly.js"></script>
   <script src="/static/javascript/jquery-te-1.4.0.min.js"></script>
