css changes for performance improvement

--- a/templates/activate_error.html
+++ b/templates/activate_error.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="/static/stylesheets/jquery-ui.min.css">
+<link rel="stylesheet" href="/static/stylesheets/faq.css">
+{% endblock %}
+
 {% block content %}
 
-<link rel="stylesheet" href="/static/stylesheets/faq.css">
 
     <div class="breadcrumbs-v2 faq-breadcrumb margin-bottom-20">
         <div class="breadcrumbs-v2-in">
