--- a/templates/change-password.html
+++ b/templates/change-password.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 
-{% block content %}
-
+{% block head %}
+<link rel="stylesheet" href="/static/stylesheets/jquery-ui.min.css">
 <link rel="stylesheet" href="/static/stylesheets/registration.css">
+{% endblock %}
+
+{% block content %}
 
 <div class="breadcrumbs">
   <div class="container">
