--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="/static/stylesheets/jquery-ui.min.css">
+{% endblock %}
+
 {% block content %}
 
 <link rel="stylesheet" href="/static/stylesheets/registration.css">
@@ -54,7 +58,7 @@
 
                     <hr>
 
-                    <h4>Forget your Password ?</h4>
+                    <h4>Forgot your password ?</h4>
                     <p>no worries, <a class="color-green" href="forgot-password">click here</a> to reset your password.</p>
                 </form>            
             </div>
