--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,28 @@
   <!--link rel="stylesheet" href="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" /--> 
 
   <!--script src="http://code.jquery.com/jquery-1.11.0.min.js"></script-->
+  
+
+  <link href="/static/stylesheets/bootstrap.min.css" rel="stylesheet" /> 
+  <link href="/static/stylesheets/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/static/line-icons/line-icons.css">  
+  <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
+   {% block head %}
+   {% endblock %}
+  
+  
+  
+  
+
+  
+  
+  
+  <link href="/static/stylesheets/blue.css" rel="stylesheet" id="style_color"/>
+  
+  
+  
+  
+
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -20,26 +42,6 @@
 
 </script>
 
-   
-  
-  <link href="/static/stylesheets/bootstrap.min.css" rel="stylesheet" /> 
-  <!--link href="/static/stylesheets/stacktable.css" rel="stylesheet" /-->
-  
-
-  <link href="/static/stylesheets/style.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/static/line-icons/line-icons.css">  
-  <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/static/flexslider/flexslider.css">  
-    <link rel="stylesheet" href="/static/parallax-slider/css/parallax-slider.css">
-  <link href="/static/stylesheets/blue.css" rel="stylesheet" id="style_color"/>
-  
-  <link href="/static/stylesheets/jquery-te-1.4.0.css" rel="stylesheet" />
-  
-  <link href="/static/stylesheets/tablesaw.stackonly.css" rel="stylesheet" />
-
-  
-  <!--link href="/static/stylesheets/custom.css" rel="stylesheet"-->
-  <!--link href="/static/stylesheets/theme.bootstrap.css" rel="stylesheet"-->
   
   
 </head>
@@ -100,8 +102,9 @@
   <!--script src="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script-->
   <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
   <script src="/static/javascript/bootstrap.min.js"></script>
-  <script src="/static/javascript/tablesaw.stackonly.js"></script>
-  <script src="/static/javascript/jquery-te-1.4.0.min.js"></script>
+  {% block script_top %}
+  {% endblock %}
+  
   {% block content %}
   {% endblock %}
   
@@ -141,18 +144,12 @@
 
 
 
-  <script type="text/javascript" src="/static/flexslider/jquery.flexslider-min.js"></script>
-  <script type="text/javascript" src="/static/parallax-slider/js/modernizr.js"></script>
-  <script type="text/javascript" src="/static/parallax-slider/js/jquery.cslider.js"></script>
+  {% block script %}
+  {% endblock %}
+  
   <script type="text/javascript" src="/static/javascript/app.js"></script>
   <script type="text/javascript" src="/static/javascript/index.js"></script>
-  <script type="text/javascript">
-    jQuery(document).ready(function() {
-        App.init();
-        App.initSliders();
-        Index.initParallaxSlider();        
-    });
-</script>
+  
 <script>
   $(function() {
     $( "#datepicker" ).datepicker();
