--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block head %}
+<link rel="stylesheet" href="/static/stylesheets/faq.css">
 <link rel="stylesheet" href="/static/stylesheets/sky-forms.css">
 <link rel="stylesheet" href="/static/stylesheets/sky-forms-blue.css">
+<link rel="stylesheet" href="/static/stylesheets/jquery-ui.min.css">
+<link href="/static/stylesheets/tablesaw.stackonly.css" rel="stylesheet" />
 
-<link rel="stylesheet" href="/static/stylesheets/faq.css">
+{% endblock %}
+
+{% block script_top %}
+<script src="/static/javascript/tablesaw.stackonly.js"></script>
+{% endblock %}
+
+{% block content %}
 
  <div class="breadcrumbs-v2 faq-breadcrumb margin-bottom-20">
         <div class="breadcrumbs-v2-in">
