--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="/static/stylesheets/jquery-ui.min.css">
+{% endblock %}
+
 {% block content %}
 
 <link rel="stylesheet" href="/static/stylesheets/registration.css">
