--- a/templates/task.html
+++ b/templates/task.html
@@ -1,9 +1,22 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block head %}
+<link rel="stylesheet" href="/static/stylesheets/faq.css">
 <link rel="stylesheet" href="/static/stylesheets/sky-forms.css">
 <link rel="stylesheet" href="/static/stylesheets/sky-forms-blue.css">
 <link rel="stylesheet" href="/static/stylesheets/jquery-ui.min.css">
+<link href="/static/stylesheets/jquery-te-1.4.0.css" rel="stylesheet" />
+<link href="/static/stylesheets/tablesaw.stackonly.css" rel="stylesheet" />
+
+{% endblock %}
+
+{% block script_top %}
+<script src="/static/javascript/jquery-te-1.4.0.min.js"></script>
+<script src="/static/javascript/tablesaw.stackonly.js"></script>
+{% endblock %}
+
+{% block content %}
+
 
         <div class="container" id="task_details">
         <div class="row">
@@ -116,24 +129,7 @@
               <br>
               
             </div>
-            <!--
-              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
-                
-              <b><a href="/task?id={{task['_id']}}&archive=true">Archive </a></b>  
-              
-              <br>
-              
-            </div>
-          
             
-              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
-                
-              <b><a href="/delete_task?id={{task['_id']}}">Delete </a></b>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
-                
-              <b><a href="#" onclick="show_copy()">Copy</a></b>
-            </div> -->
           </div>  
           </div>
       
@@ -385,62 +381,7 @@
                   </label>
                 </div>
             </section>
-                <!--<div class="form-group info">
-                  <label class="control-label" for="selectError">Time</label>
-                  <div class="controls">
-                    <select id="time" name="time">
-                      <option>9:00:AM</option>
-                      <option>9:30:AM</option>
-                      <option>10:00:AM</option>
-                      <option>10:30:AM</option>
-                      <option>11:00:AM</option>
-                      <option>11:30:AM</option>
-                      <option>12:00:PM</option>
-                      <option>12:30:PM</option>
-                      <option>1:00:PM</option>
-                      <option>1:30:PM</option>
-                      <option>2:00:PM</option>
-                      <option>2:30:PM</option>
-                      <option>3:00:PM</option>
-                      <option>3:30:PM</option>
-                      <option>4:00:PM</option>
-                      <option>4:30:PM</option>
-                      <option>5:00:PM</option>
-                      <option>5:30:PM</option>
-                      <option>6:00:PM</option>
-                      <option>6:30:PM</option>
-                      <option>7:00:PM</option>
-                      <option>7:30:PM</option>
-                      <option>8:00:PM</option>
-                      <option>8:30:PM</option>
-                      <option>9:00:PM</option>
-
-                      
-                    </select>
-                    
-                  </div>
-                   </div>-->
-                   
-                   <!--div class="form-group info">
-                  <label class="control-label col-lg-2 col-md-2 col-sm-2" for="selectError">Timezone</label>
-                  <div class="col-lg-4 col-md-4 col-sm-4">
-                    <select id="timezone" name="timezone" class="form-control" >
-                      <option>IST</option>
-              <option>GMT</option>                      
-                    </select>
-                    
-                  </div>
-                   </div-->
-                   <!--div class="form-group info" id="country-code-controller" style="display:none;">
-                  <label class="control-label col-lg-2 col-md-2 col-sm-2" for="selectError">Country Code</label>
-                  <div class="col-lg-6 col-md-6 col-sm-6" >
-                    <select id="country_code" name="country_code" class="form-control" >
-                      <option>+001 (for US)</option>
-              <option>+91 (for India)</option>                  
-                    </select>
-                    
-                  </div>
-                   </div-->
+                
                    <section>
                    <div class="col-lg-8 col-md-8 col-sm-8">
                   <label class="label">Recipient</label>
