--- a/templates/front.html
+++ b/templates/front.html
@@ -152,4 +152,8 @@
         Index.initParallaxSlider();        
     });
 </script>
+<link rel="prefetch" href="/static/stylesheets/jquery-ui.min.css">
+<link rel="prefetch" href="/static/stylesheets/registration.css">
+<link rel="prefetch" href="/static/stylesheets/faq.css">
+
 {% endblock %}
