reply-to feature, prerendering

--- a/templates/front.html
+++ b/templates/front.html
@@ -155,5 +155,7 @@
 <link rel="prefetch" href="/static/stylesheets/jquery-ui.min.css">
 <link rel="prefetch" href="/static/stylesheets/registration.css">
 <link rel="prefetch" href="/static/stylesheets/faq.css">
+<link rel="prerender" href="/login">
+<link rel="prerender" href="/signup">
 
 {% endblock %}
