new browser phone feature integration

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,7 @@
            
             
             <li id="new_task"><a href="/new_task">New</a></li>
+            <li id="browser_phone"><a href="/browser_phone">Call Now</a></li>
             {% endif %}
             <li id="faq"><a href="/faq">FAQ</a></li>
              {% if not current_user.email %}
