css changes for call buttons

--- a/templates/browser_phone.html
+++ b/templates/browser_phone.html
@@ -94,15 +94,15 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2">
+                        <div class="col-md-1 col-sm-5 col-xs-2">
                             <button class="btn-u " type="button" onclick="call()">Call</button>                             
 
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-md-1 col-sm-2 col-xs-1">
                             
 
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-1 col-sm-5 col-xs-2">
                             <button class="btn-u" type="button" onclick="hangup()">Hang Up</button>                        
                         </div>
                     </div>
