helper text when entering time details for tasks

--- a/templates/list.html
+++ b/templates/list.html
@@ -288,7 +288,7 @@
 			            <label class="label">Time</label>
 			            <label class="input" >
 			              <input type="time" id="time" class="form-control" name="time" value="09:00:AM">
-			              
+			              <div class="note" id="time-helper">All times in IST please</div>
 			            </label>
 			          </div>
 			      </section>
