mixpanel integration, faq changes

--- a/templates/activate_error.html
+++ b/templates/activate_error.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block head %}
+{% block css %}
 <link rel="stylesheet" href="/static/stylesheets/jquery-ui.min.css">
 <link rel="stylesheet" href="/static/stylesheets/faq.css">
 {% endblock %}
