--- a/templates/faq.html
+++ b/templates/faq.html
@@ -103,11 +103,11 @@
                         </div>
                         <div id="collapseThree" class="panel-collapse collapse">
                             <div class="panel-body">
-                                <p>There is an annual subscription charge of Rs.4500 and additional usage charges as follows:-</p>
-                                <ul class="list-unstyled">
-                                    <li><i class="fa fa-check color-green"></i>Email - No additional charges as of now.</li>
-                                    <li><i class="fa fa-check color-green"></i>SMS - Rs.0.60/message sent</li>
-                                    <li><i class="fa fa-check color-green"></i>Phone Call - Rs.2.00/call made</li>
+                            We have plans for all kinds of requirements. Call 9830906922 for details. Some popular plans given below:-
+                                    <li><i class="fa fa-check color-green"></i>Annual subscription of Rs.10000</li>
+                                    <li><i class="fa fa-check color-green"></i>Half-yearly subscription of Rs.6000</li>
+                                    <li><i class="fa fa-check color-green"></i>Monthly subscription of Rs.2000</li>
+                                    <li><i class="fa fa-check color-green"></i>Unlimited calls, sms, emails for above 3 plans subject to fair usage.</li>
                                 </ul>                            
                             </div>
                         </div>
