--- a/templates/front.html
+++ b/templates/front.html
@@ -151,6 +151,8 @@
         App.initSliders();
         Index.initParallaxSlider();        
     });
+
+    mixpanel.track("Main Page View");
 </script>
 <link rel="prefetch" href="/static/stylesheets/jquery-ui.min.css">
 <link rel="prefetch" href="/static/stylesheets/registration.css">
